--- a/frontend-js/index.html
+++ b/frontend-js/index.html
@@ -280,7 +280,7 @@
             constructor() {
                 this.currentUser = null;
                 this.authToken = null;
-                this.apiBaseUrl = 'https://your-backend-url.vercel.app'; // Replace with actual Vercel URL
+                this.apiBaseUrl = 'https://multi-tenant-saa-s-notes-applicatio-alpha.vercel.app'; // Backend URL
                 this.init();
             }
 
