--- a/frontend-js/index.html
+++ b/frontend-js/index.html
@@ -13,9 +13,10 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #f8fafc;
             min-height: 100vh;
             line-height: 1.6;
+            color: #1a202c;
         }
 
         .container {
@@ -30,21 +31,19 @@
         }
 
         .header h1 {
-            color: white;
+            color: #2d3748;
             font-size: 2.5rem;
-            font-weight: 700;
-            text-shadow: 0 2px 4px rgba(0,0,0,0.3);
+            font-weight: 600;
             margin-bottom: 10px;
         }
 
         .card {
-            background: rgba(255, 255, 255, 0.95);
-            backdrop-filter: blur(10px);
-            padding: 40px;
-            border-radius: 20px;
-            box-shadow: 0 20px 40px rgba(0,0,0,0.1);
-            margin-bottom: 30px;
-            border: 1px solid rgba(255, 255, 255, 0.2);
+            background: white;
+            padding: 32px;
+            border-radius: 12px;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+            margin-bottom: 24px;
+            border: 1px solid #e2e8f0;
         }
 
         .login-form {
@@ -65,72 +64,67 @@
 
         .form-group input, .form-group textarea {
             width: 100%;
-            padding: 15px;
-            border: 2px solid #e2e8f0;
-            border-radius: 12px;
+            padding: 12px 16px;
+            border: 1px solid #d1d5db;
+            border-radius: 8px;
             font-size: 16px;
-            transition: all 0.3s ease;
+            transition: all 0.2s ease;
             background: white;
         }
 
         .form-group input:focus, .form-group textarea:focus {
             outline: none;
-            border-color: #667eea;
-            box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
+            border-color: #3b82f6;
+            box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
         }
 
         .btn {
             width: 100%;
-            padding: 15px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            padding: 12px 16px;
+            background: #3b82f6;
             color: white;
             border: none;
-            border-radius: 12px;
+            border-radius: 8px;
             cursor: pointer;
             font-size: 16px;
-            font-weight: 600;
-            transition: all 0.3s ease;
-            box-shadow: 0 4px 15px rgba(102, 126, 234, 0.3);
+            font-weight: 500;
+            transition: all 0.2s ease;
         }
 
         .btn:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 8px 25px rgba(102, 126, 234, 0.4);
+            background: #2563eb;
         }
 
         .btn-success {
-            background: linear-gradient(135deg, #48bb78 0%, #38a169 100%);
-            box-shadow: 0 4px 15px rgba(72, 187, 120, 0.3);
+            background: #10b981;
         }
 
         .btn-success:hover {
-            box-shadow: 0 8px 25px rgba(72, 187, 120, 0.4);
+            background: #059669;
         }
 
         .btn-danger {
-            background: linear-gradient(135deg, #f56565 0%, #e53e3e 100%);
-            box-shadow: 0 4px 15px rgba(245, 101, 101, 0.3);
+            background: #ef4444;
         }
 
         .btn-danger:hover {
-            box-shadow: 0 8px 25px rgba(245, 101, 101, 0.4);
+            background: #dc2626;
         }
 
         .btn-warning {
-            background: linear-gradient(135deg, #ed8936 0%, #dd6b20 100%);
-            box-shadow: 0 4px 15px rgba(237, 137, 54, 0.3);
+            background: #f59e0b;
         }
 
         .btn-warning:hover {
-            box-shadow: 0 8px 25px rgba(237, 137, 54, 0.4);
+            background: #d97706;
         }
 
         .test-accounts {
-            background: rgba(102, 126, 234, 0.1);
+            background: #f1f5f9;
             padding: 20px;
-            border-radius: 12px;
+            border-radius: 8px;
             margin-top: 20px;
-            border: 1px solid rgba(102, 126, 234, 0.2);
+            border: 1px solid #e2e8f0;
         }
 
         .test-accounts h3 {
@@ -153,11 +147,12 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 25px;
-            background: rgba(255, 255, 255, 0.9);
-            border-radius: 16px;
-            margin-bottom: 30px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+            padding: 20px;
+            background: white;
+            border-radius: 8px;
+            margin-bottom: 24px;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+            border: 1px solid #e2e8f0;
         }
 
         .user-info h2 {
@@ -175,14 +170,15 @@
         .notes-container {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 30px;
+            gap: 24px;
         }
 
         .create-note {
-            background: rgba(255, 255, 255, 0.9);
-            padding: 30px;
-            border-radius: 16px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+            background: white;
+            padding: 24px;
+            border-radius: 8px;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+            border: 1px solid #e2e8f0;
         }
 
         .create-note h2 {
@@ -193,41 +189,42 @@
 
         .create-note textarea {
             width: 100%;
-            padding: 15px;
-            border: 2px solid #e2e8f0;
-            border-radius: 12px;
+            padding: 12px 16px;
+            border: 1px solid #d1d5db;
+            border-radius: 8px;
             resize: vertical;
-            min-height: 120px;
+            min-height: 100px;
             font-family: inherit;
         }
 
         .upgrade-prompt {
-            background: linear-gradient(135deg, #fef5e7 0%, #fed7aa 100%);
-            border: 2px solid #f6ad55;
-            padding: 20px;
-            border-radius: 12px;
-            margin-top: 20px;
+            background: #fef3c7;
+            border: 1px solid #f59e0b;
+            padding: 16px;
+            border-radius: 8px;
+            margin-top: 16px;
             text-align: center;
         }
 
         .upgrade-prompt h3 {
-            margin-bottom: 10px;
-            color: #c05621;
-            font-size: 1.2rem;
+            margin-bottom: 8px;
+            color: #92400e;
+            font-size: 1.1rem;
         }
 
         .upgrade-prompt p {
-            margin-bottom: 15px;
-            color: #9c4221;
+            margin-bottom: 12px;
+            color: #92400e;
         }
 
         .notes-list {
-            background: rgba(255, 255, 255, 0.9);
-            padding: 30px;
-            border-radius: 16px;
+            background: white;
+            padding: 24px;
+            border-radius: 8px;
             max-height: 600px;
             overflow-y: auto;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+            border: 1px solid #e2e8f0;
         }
 
         .notes-list h2 {
@@ -237,18 +234,16 @@
         }
 
         .note-item {
-            background: white;
-            padding: 20px;
-            margin-bottom: 15px;
-            border-radius: 12px;
+            background: #f8fafc;
+            padding: 16px;
+            margin-bottom: 12px;
+            border-radius: 8px;
             border: 1px solid #e2e8f0;
-            transition: all 0.3s ease;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+            transition: all 0.2s ease;
         }
 
         .note-item:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 8px 25px rgba(0,0,0,0.1);
+            background: #f1f5f9;
         }
 
         .note-item h3 {
@@ -273,30 +268,29 @@
         }
 
         .note-meta button {
-            padding: 6px 12px;
-            background: linear-gradient(135deg, #f56565 0%, #e53e3e 100%);
+            padding: 4px 8px;
+            background: #ef4444;
             color: white;
             border: none;
-            border-radius: 8px;
+            border-radius: 4px;
             cursor: pointer;
-            font-size: 0.8rem;
-            font-weight: 600;
-            transition: all 0.3s ease;
+            font-size: 0.75rem;
+            font-weight: 500;
+            transition: all 0.2s ease;
         }
 
         .note-meta button:hover {
-            transform: translateY(-1px);
-            box-shadow: 0 4px 15px rgba(245, 101, 101, 0.3);
+            background: #dc2626;
         }
 
         .error-message {
-            background: linear-gradient(135deg, #fed7d7 0%, #feb2b2 100%);
-            color: #c53030;
-            padding: 15px;
-            border-radius: 12px;
-            margin-bottom: 20px;
+            background: #fef2f2;
+            color: #dc2626;
+            padding: 12px;
+            border-radius: 8px;
+            margin-bottom: 16px;
             display: none;
-            border: 1px solid #f56565;
+            border: 1px solid #fecaca;
             font-weight: 500;
         }
 
@@ -308,22 +302,22 @@
         }
 
         .admin-actions {
-            background: linear-gradient(135deg, #e6fffa 0%, #b2f5ea 100%);
-            border: 2px solid #4fd1c7;
-            padding: 20px;
-            border-radius: 12px;
-            margin-top: 20px;
+            background: #f0fdfa;
+            border: 1px solid #5eead4;
+            padding: 16px;
+            border-radius: 8px;
+            margin-top: 16px;
         }
 
         .admin-actions h3 {
-            margin-bottom: 15px;
-            color: #234e52;
-            font-size: 1.1rem;
+            margin-bottom: 12px;
+            color: #0f766e;
+            font-size: 1rem;
         }
 
         .admin-actions p {
-            margin-bottom: 15px;
-            color: #2c7a7b;
+            margin-bottom: 12px;
+            color: #0f766e;
         }
 
         @media (max-width: 768px) {
@@ -473,9 +467,9 @@
                             
                             ${this.currentUser.role === 'admin' ? `
                                 <div class="admin-actions">
-                                    <h3>👥 Admin Actions</h3>
+                                    <h3>Admin Actions</h3>
                                     <p>Invite new users to your organization</p>
-                                    <form id="inviteForm" style="margin-top: 15px;">
+                                    <form id="inviteForm" style="margin-top: 12px;">
                                         <div class="form-group">
                                             <input type="email" id="invite-email" placeholder="Enter email address" required>
                                         </div>
@@ -486,12 +480,12 @@
                             
                             ${this.currentUser.tenant.plan === 'free' ? `
                                 <div class="upgrade-prompt">
-                                    <h3>🚀 Upgrade to Pro</h3>
+                                    <h3>Upgrade to Pro</h3>
                                     <p>You've reached the free plan limit of 3 notes. Upgrade to Pro for unlimited notes!</p>
                                     ${this.currentUser.role === 'admin' ? `
                                         <button class="btn btn-warning" onclick="app.upgradeTenant()">Upgrade Now</button>
                                     ` : `
-                                        <p style="color: #9c4221; font-size: 0.9rem;">Contact your admin to upgrade the plan</p>
+                                        <p style="color: #92400e; font-size: 0.9rem;">Contact your admin to upgrade the plan</p>
                                     `}
                                 </div>
                             ` : ''}
@@ -604,7 +598,7 @@
                             <h3>${note.title}</h3>
                             <p>${note.content}</p>
                             <div class="note-meta">
-                                <span>By ${note.authorEmail || 'Unknown'} • ${new Date(note.createdAt).toLocaleDateString()}</span>
+                                <span>By ${note.author_email || note.authorEmail || 'Unknown'} • ${new Date(note.created_at || note.createdAt).toLocaleDateString()}</span>
                                 <button onclick="app.deleteNote(${note.id})">Delete</button>
                             </div>
                         </div>
